--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ header {
   text-align: center
 }
 
-/*section #featured-property {*/
-/*  text-align: center*/
-/*}*/
+figure {
+  text-align: center
+}
 
 body {
   width: 100%;
