--- a/style.css
+++ b/style.css
@@ -11,7 +11,13 @@ p {
 }
 
 section #details {
-    display:inline-block;
+
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+
 }
 
 body {
