--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@ section #details {
   width: 100%;
 }
 
+section #details div {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
 body {
   width: 100%;
   height: 100%;
