--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ p {
 }
 
 #details {
-  /*background-color: #333;*/
-  /*overflow: hidden;*/
-  /*position: fixed;*/
-  /*bottom: 0;*/
-  /*width: 100%;*/
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   /*margin: auto;*/
   /*width: 50%;*/
   /*border: 3px solid green;*/
