--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ p {
 #details {
   display: inline-block;
   background-color: #333;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  /*overflow: hidden;*/
+  /*position: fixed;*/
+  /*bottom: 0;*/
+  /*width: 100%;*/
   /*margin: auto;*/
   /*width: 50%;*/
   /*border: 3px solid green;*/
