--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ p {
 #details, #details div {
   display: block;
   background-color: #333;
+  float: left;
   
   /*overflow: hidden;*/
   /*position: fixed;*/
