--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p {
   /*position: fixed;*/
   /*bottom: 0;*/
   /*width: 100%;*/
-  /*margin: auto;*/
+  margin: auto;
   /*width: 50%;*/
   /*border: 3px solid green;*/
   /*padding: 10px;*/
