--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
   
   /*overflow: hidden;*/
   /*position: fixed;*/
-  bottom: 0;
+  /*bottom: 0;*/
   /*width: 100%;*/
   margin: auto;
   /*width: 50%;*/
